fixed header gap in nftminter for mobile use

--- a/src/frontend/aigentqube-dashboard/src/index.css
+++ b/src/frontend/aigentqube-dashboard/src/index.css
@@ -65,6 +65,11 @@ code {
     padding-right: clamp(8px, 5vw, 40px);
     padding-left: clamp(8px, 6vw, 40px);
   }
+  .minter-header{
+      height: 4rem;
+      display: flex;
+      padding: 1rem
+  }
 }
 
 .chakra-card.css-1g472s4 { /*needed for no more overlap of prompts*/
